@@ -80,6 +80,7 @@ All (GUI):
 
 - Improve stock items consistency and aesthetics (dhowland).
 - Fix bug with missing items in overflowing AUI toolbar (Maarten Bent).
+- Revert to left-aligning wxSpinCtrl contents by default.
 
 wxGTK:
 
